@@ -41,7 +41,7 @@ public abstract class FilePathWrapper extends FilePath {
 
     private FilePathWrapper create(String path, FilePath base) {
         try {
-            FilePathWrapper p = getClass().newInstance();
+            FilePathWrapper p = getClass().getDeclaredConstructor().newInstance();
             p.name = path;
             p.base = base;
             return p;
